--- a/container_images/validate-integtest/Dockerfile
+++ b/container_images/validate-integtest/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright 2020 Google Inc. All Rights Reserved.
+# Copyright 2022 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM golang:1.13
+FROM golang
+
 RUN go get -u github.com/jstemmer/go-junit-report
 
 FROM node
